@@ -107,6 +107,13 @@ class RespondToController < ActionController::Base
       type.any(:js, :xml) { render :text => "Either JS or XML" }
     end
   end
+  
+  def handle_any_any
+    respond_to do |type|
+      type.html { render :text => 'HTML' }
+      type.any { render :text => 'Whatever you ask for, I got it' }
+    end
+  end
 
   def all_types_with_layout
     respond_to do |type|
@@ -333,6 +340,35 @@ class MimeControllerTest < Test::Unit::TestCase
     @request.env["HTTP_ACCEPT"] = "text/xml"
     get :handle_any
     assert_equal 'Either JS or XML', @response.body
+  end
+
+  def test_handle_any_any
+    @request.env["HTTP_ACCEPT"] = "*/*"
+    get :handle_any_any
+    assert_equal 'HTML', @response.body
+  end
+  
+  def test_handle_any_any_parameter_format
+    get :handle_any_any, {:format=>'html'}
+    assert_equal 'HTML', @response.body
+  end
+  
+  def test_handle_any_any_explicit_html
+    @request.env["HTTP_ACCEPT"] = "text/html"
+    get :handle_any_any
+    assert_equal 'HTML', @response.body
+  end
+
+  def test_handle_any_any_javascript
+    @request.env["HTTP_ACCEPT"] = "text/javascript"
+    get :handle_any_any
+    assert_equal 'Whatever you ask for, I got it', @response.body
+  end
+  
+  def test_handle_any_any_xml
+    @request.env["HTTP_ACCEPT"] = "text/xml"
+    get :handle_any_any
+    assert_equal 'Whatever you ask for, I got it', @response.body
   end
 
   def test_rjs_type_skips_layout
